--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,12 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: hsl(210deg, 46%, 95%);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .span-row-2 {
@@ -121,6 +122,26 @@ body {
   display: inline;
   font-size: 11px;
   font-weight: normal;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .attribution {
+    position: static;
+  }
+}
+@media screen and (max-width: 375px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+  .span-row-2 {
+    grid-row: span 1;
+  }
+  .span-column-2 {
+    grid-column: span 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
