--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,11 +16,12 @@ $light-grayish-blue: hsl(210, 46%, 95%);
 
 body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: $light-grayish-blue;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .span-row-2 {
@@ -36,8 +37,8 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
-
-    scale: 0.8;
+    
+    scale: 0.8;   
 }
 
 .grid {
@@ -138,12 +139,36 @@ body {
     background: #fff;
     position: absolute;
     bottom: 0;
-  }
-  .attribution a {
+}
+.attribution a {
     color: hsl(228deg, 45%, 44%);
-  }
-  .attribution h1 {
+}
+.attribution h1 {
     display: inline;
     font-size: 11px;
     font-weight: normal;
-  }
+}
+
+
+
+  @media screen and (max-width: 1000px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .attribution {
+        position: static;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+    .span-row-2 {
+        grid-row: span 1;
+    }
+    
+    .span-column-2 {
+        grid-column: span 1;
+    }    
+}
